
syntax = "proto3";
package cortex.axon;
option go_package = "github.com/cortexapps/axon";


service CortexApi {
  rpc Call(CallRequest) returns (CallResponse);
}

message CallRequest {
  string method = 2;
  string path = 3;
  string content_type = 4;
  string body = 5;
}

message CallResponse {
  int32 status_code = 1;
  string status = 2;
  map<string, string> headers = 3;
  string body = 4;  
}

